feat: actualizar ejercicios 02-Streams y añadir ejercicios 14-Concurrencia y 15-Concurrencia-Asíncrona
02-Streams refinado: 8 facil, 8 medio, 6 dificil (elimina ejercicios sobrantes).
14-Concurrencia: Thread/synchronized/volatile/wait-notify/AtomicInteger (facil),
ReentrantLock/Semaphore/CountDownLatch/CyclicBarrier/ReadWriteLock (medio),
BlockingQueue/ConcurrentHashMap/Phaser/ThreadLocal (dificil).
15-Concurrencia-Asíncrona: ExecutorService/Future/CompletableFuture (facil),
allOf/thenCombine/ScheduledExecutor/orTimeout/ForkJoin (medio),
circuit breaker/retry/MergeSort/rate limiter (dificil).